# lv3.1-recovery

./: .clang-format  .gitignore  .gitmodules  README.md
Analysis/: Mission_Analysis.ipynb  bandStrength.R  drop_test_analysis.ipynb  drop_test_montecarlo.ipynb  drop_test_simulator.ipynb
Analysis/.ipynb_checkpoints/: drop_test_simulator-checkpoint.ipynb
Analysis/drop_test_sample_data/: early_across_data.csv  early_against_data.csv  nodrogue_against_data.csv  nomain_across_data.csv  nomain_against_data.csv  nominal_across_data.csv
Camera Board/eagle/: Camera Board.s#1
CameraBoard/eagle/: CameraBoard.sch
RecoveryBoard/: RecoveryBoard-BOM.xlsx
RecoveryBoard/FirmWare/: checkupCode.cpp  checkupCode.h
RecoveryBoard/eagle/: R--NHQ103B375T10--Thermistor 10K.lbr  RecoveryBoard.b#1  RecoveryBoard.brd  RecoveryBoard.s#1  RecoveryBoard.sch
TelemetrumSpoofer/telespoof/: telespoof.ino
capstoneArchive/Analysis/: drop_test_analysis.ipynb  drop_test_montecarlo.ipynb  drop_test_simulator.ipynb
controlSystem/HallSensorBoard/: DRV5056-Q1.kicad_sym  HallSensorBoard.kicad_pcb  HallSensorBoard.kicad_pro  fp-lib-table  (+2 more)
controlSystem/RecoveryBoard/firmware-rs/: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml  spoof_ers_can.py  test_can.py
controlSystem/RecoveryBoard/firmware-rs/.cargo/: config.toml
controlSystem/RecoveryBoard/firmware-rs/src/: adc.rs  blink.rs  buzzer.rs  can.rs  lib.rs  motor.rs  ring.rs
controlSystem/RecoveryBoard/firmware-rs/src/shared/: adc.rs  buzzer.rs  can.rs  mod.rs  types.rs  uart.rs
mechanicalSystem/: recoverySystem.SLDASM
(+276 files in other folders)
